tests/neg-macros/i19842-a.check
-- Error: tests/neg-macros/i19842-a/Test.scala:9:50 --------------------------------------------------------------------
9 |@main def Test = summon[Serializer[ValidationCls]] // error
  |                                                  ^
  |Exception occurred while executing macro expansion.
  |java.lang.RuntimeException: assertion failed: Parents of class symbol differs from the parents in the tree for object objectSerializer$macro$1
  |
  |Parents in symbol: [class Object, trait Serializer]
  |Parents in tree: [trait Serializer]
  |
  |	at Macros$.makeSerializer(Macro.scala:32)
  |
  |---------------------------------------------------------------------------------------------------------------------
  |Inline stack trace
  |- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
  |This location contains code that was inlined from Test.scala:5
5 |  inline given [T] => Serializer[T] = ${ Macros.makeSerializer[T] }
  |                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   ---------------------------------------------------------------------------------------------------------------------
